改用Java8中的BASE64 API